# tarefa-4-formula_one_races

./: main.py  pyproject.toml
.github/workflows/: data_update.yml
manager/: images.py  jolpica.py
src/lib/: dataLoader.js
static/data/: circuits.csv  constructors.csv  constructors_standings.csv  drivers.csv  drivers_standings.csv  races.csv
